--- a/src/app/Creator/todo-item/todo-item.component.html
+++ b/src/app/Creator/todo-item/todo-item.component.html
@@ -1,10 +1,12 @@
 <div class="card my-4">
     <div class="card-body">
-        <h3 class="card-title">{{todo.title}}</h3>
-        <p class="card-text">{{todo.content}}</p>
+        <h3 [ngClass]="{'card-title': true, 'strikeText': !todo.active}">{{todo.title}}</h3>
+        <p [ngClass]="{'card-text': true, 'strikeText': !todo.active}">{{todo.content}}</p>
         <!-- When the following button is clicked then the click event is triggered 
             which calls the sendSelectedTodoForDeletion method, passing the todo on 
             which the delete button is clicked. -->
         <a href="#" class="btn btn-danger" (click)="sendSelectedTodoForDeletion(todo)">Delete</a>
+        <button type="button" [class]="todo.active ? 'btn btn-outline-success mx-3' : 'btn btn-secondary mx-3 invisible'"
+            (click)="onTaskCompleted(todo,$event)">Mark As Done</button>
     </div>
 </div>
