--- a/src/app/Creator/todo-list/todo.component.html
+++ b/src/app/Creator/todo-list/todo.component.html
@@ -1,10 +1,13 @@
-<div>
-    <p>This is the main todo section</p>
+<div class="mt-4">
+    <app-todo-add (sendNewTodoToParent)="addNewTodo($event)"></app-todo-add>
+    <div *ngIf="this.listOfTodos.length === 0" class="alert alert-light" role="alert">
+        <h2 class="font-italic">No Todos created yet.</h2>
+    </div>
     <div *ngFor="let todo of listOfTodos">
         <!--
             When the custom defined capturedTodoForDeletion event is triggered, the following deleteSelectedTodo method is called,
             which actually deleted the captured/selected todo object from the original stored todo list.
         -->
-        <app-todo-item [todo]="todo" (capturedTodoForDeletion)="deleteSelectedTodo($event)"></app-todo-item>
+        <app-todo-item [todo]="todo" (capturedTodoForDeletion)="deleteSelectedTodo($event)" (capturedTodoForStatusUpdate)="updateTodoStatus($event)"></app-todo-item>
     </div>
 </div>
